--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: go
 go:
   - 1.5
-script: go get github.com/willejs/go-http-hello && go test && go build
+env:
+  - GOARCH=amd64
+script: 
+  - go get github.com/willejs/go-http-hello 
+  - go test 
+  - go build
 notifications:
   email: false
